Fixed Homepage link to be under imgage instead of top 	modified:   recipes/bang-bang-recipe.html 	modified:   recipes/oreo-milkshake.html

--- a/recipes/bang-bang-recipe.html
+++ b/recipes/bang-bang-recipe.html
@@ -3,12 +3,11 @@
     <meta charset="UTF-8">
 
     <head>
-        <h1>Bang Bang Chicken</h1> <a href="../index.html">Home</a>
-        
-
+        <h1>Bang Bang Chicken</h1> 
+    
         <img src="../img/bbchicken.JPG" alt="Picture of Bang Bang Chicken" 
         width="310" height="310">
-
+        <ul><a href="../index.html">Home</a></ul>
     </head>
 
     <body>
