--- a/recipes/oreo-milkshake.html
+++ b/recipes/oreo-milkshake.html
@@ -4,10 +4,11 @@
 
     <head>
         <h1>Oreo Milkshake</h1>
-        <a href="../index.html">Homepage</a>
+       <!-- <a href="../index.html">Homepage</a>-->
 
         <img src="../img/Oreo.JPG" alt="Picture of Oreo Milkshake" 
         width="310" height="310">
+        <ul><a href="../index.html">Homepage</a></ul>
 
     </head>
 
